...
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/etReferenceNumber"
                app:layout_constraintTop_toBottomOf="@+id/etReferenceNumber" />

            <EditText
                android:id="@+id/etUnitNumber"
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:background="@drawable/edittext_bg"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="13sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/purchaseTypeLabel"
                app:layout_constraintTop_toBottomOf="@+id/purchaseTypeLabel" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_black_ttf"
                android:text="Confirm"
                android:textSize="16sp"
...
